...
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="placeholder_rate">5</string>
    <string name="hint_leave_comment">Comments are anonymously shared with drivers</string>
    <string name="ride_summary_description">Thank you for the ride!</string>
    <string name="rate_unable_to_load_map">Unable to load ride map</string>
    <string name="btn_submit">Submit</string>
    <string name="text_cancel_ride_dialog">Do you really want to cancel this ride?</string>
    <string name="btn_sms">SMS</string>
    <string name="btn_call">CALL</string>
    <string name="mock">Mock</string>
    <string name="location_error">Can not get location. Please check settings and enable location.</string>
    <string name="unable_resolve_address">Unable to resolve this location,  please try again</string>

...
    <string name="hint_zip">ZIP</string>
    <string name="btn_add_payment">Add Payment</string>
    <string name="notification_verify_email_before">Verify email to start riding</string>
    <string name="notification_set_payment_before">Save a payment method to start riding</string>
    <string name="notification_primary_card_expired">Your primary credit card expired</string>
    <string name="error_set_payment_before">Please save a payment\n method to start riding.</string>
    <string name="warning_location_distance">Your requested pickup location is more than %d yards away from your current location. Continue?</string>
    <string name="text_pickup_time_less_tan_min">Pickup time is approximately &lt;1 min</string>
    <plurals name="text_pickup_time">
        <item quantity="one">Pickup time is approximately %1$s min</item>
        <item quantity="other">Pickup time is approximately %1$s mins</item>
    </plurals>
    <string name="title_fare_estimate">Fare Estimate</string>
...
    <string name="title_no_driver_available">No Driver Available</string>
    <string name="message_no_driver_available">We are sorry currently no driver is available at your location.</string>
    <string name="message_ride_cancelled_by_driver">Your ride is cancelled by the driver.</string>
    <string name="message_ride_cancelled_by_driver_with_fee">Your ride is cancelled by the driver. You have been charged a $%1$.2f cancellation fee.</string>
    <string name="message_ride_cancelled_by_admin">Your ride is cancelled by admin.</string>
    <string name="message_ride_cancelled_by_admin_with_fee">Your ride is cancelled by admin. You have been charged a $%1$.2f cancellation fee.</string>
    <string name="message_ride_cancelled_by_user">Your ride has been successfully cancelled</string>
    <string name="message_ride_cancelled_by_user_with_fee">Your ride has been successfully cancelled. You have been charged a $%1$.2f cancellation fee.</string>
    <string name="message_active_ride_cancel">The driver has started the trip. You cannot cancel after the trip has started.</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="scheme_sms">sms</string>
    <string name="scheme_html">text/html</string>
...
